<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note</string>
    <string name="setpwd">Set Password</string>
    <string name="enter">Please enter password </string>
     <string name="title">Please Set Password </string>
    <string name="invalid_password">Invalid Password....!</string>
    <string name="action_settings">Settings</string>
    <string name="no_pwd">No Password created yet</string>
    <string name="hint_password">Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtCancel">Delete</string>
    <string name="txtConfirm">Edit</string>
    <string name="txtSave">Save</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtaddnote">AddDairy</string>
    <string name="search_hint">Search here</string>
    <string name="search">Search</string>
    <string name="note_hint">Enter Dairy notes</string>
    <string name="date_hint">Select date</string>
    <string name="confirm_delete">Are you sure want to edit/delete/View ?</string>
    <string name="confirm_alert_heading">Edit/Delete</string>
    <string name="enter_note">Please Enter Dairy Notes</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>