<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_15dp"
     android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginRight="@dimen/_15dp"
    android:background="@color/pm_voilet"
    android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="@dimen/_5dp"
            android:paddingBottom="@dimen/_8dp"
            android:paddingLeft="@dimen/_3dp"
            android:paddingTop="@dimen/_5dp" >

            <TextView
                android:id="@+id/tvCDHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_note"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="@dimen/_5dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5dp"
                android:layout_marginTop="@dimen/_5dp"
                android:orientation="vertical"
                android:padding="@dimen/_3dp" >

                <EditText
                    android:id="@+id/etDairyNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_margin="@dimen/_5dp"
                    android:hint="@string/note_hint"
                    android:padding="6dp"
                    android:inputType="textMultiLine"
                   
                    
                    android:lines="3"
                    android:typeface="sans" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_dim" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10dp"
                    android:padding="@dimen/_10dp"
                    android:layout_weight="1"
                    android:background="#2E3841"
                    android:gravity="center"
                    android:text="@string/txtSave"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                   android:layout_margin="@dimen/_10dp"
                    android:padding="@dimen/_10dp"
                    android:layout_weight="1"
                    android:background="#2E3841"
                    android:gravity="center"
                    android:text="@string/txtCancel"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
  

</LinearLayout>